--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+  <div class="grid">
+    <div class="box box1">
+      <div class="item" draggable="true" id="item1">item1</div>
+      <div class="item" draggable="true" id="item2">item2</div>
+      <div class="item" draggable="true" id="item3">item3</div>
+      <div class="item" draggable="true" id="item4">item4</div>
+      <div class="item" draggable="true" id="item5">item5</div>
+    </div>
+    <div class="box box2">
+    </div>
+  </div>
+
   <h1>実況リスト</h1>
 
   <img src="imgs/niconico.png">
